--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,8 +30,8 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            python -m venv venv
-            . venv/bin/activate
+            # python -m venv venv
+            # . venv/bin/activate
             pip install -r requirements.txt
 
       - save_cache:
@@ -47,7 +47,7 @@ jobs:
       - run:
           name: run tests
           command: |
-            . venv/bin/activate
+            # . venv/bin/activate
             python schema.py
 
       - store_artifacts:
