--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
           command: |
             # python -m venv venv
             # . venv/bin/activate
-            pip install -r requirements.txt
+            pip install --user -r requirements.txt
 
       - save_cache:
           paths:
